--- a/reminder/pubspec.yaml
+++ b/reminder/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth: ^1.1.4
   google_sign_in: ^5.0.3
   sqflite: ^2.1.0+1
+  flutter_i18n:
 
   font_awesome_flutter: ^9.0.0
 
@@ -74,6 +75,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/i18n/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
