--- a/reminder/pubspec.yaml
+++ b/reminder/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   geolocator: ^9.0.2
   flutter_map: ^1.1.1
   latlong2: ^0.8.1
+  google_maps_flutter: ^2.2.1
 
 dev_dependencies:
   flutter_test:
