--- a/reminder/pubspec.yaml
+++ b/reminder/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_i18n:
+
   firebase_auth: ^1.1.4
   google_sign_in: ^5.0.3
   sqflite: ^2.1.0+1
@@ -58,7 +60,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   timezone:
   flutter_local_notifications:
-  datetime_picker_formfield: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -70,8 +71,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
   assets:
-    - assets/images/logo.png
+   - assets/i18n/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -102,5 +105,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-dependency_overrides:
-  firebase_core_platform_interface: 4.5.1
